fix: make master node of postgres to not change the node
becuse application is crashing because of this

--- a/values.yaml
+++ b/values.yaml
@@ -23,4 +23,6 @@ webPersistence:
 postgresql:
   persistence:
     storageClass: openebs-standard
-
+  master: 
+    nodeSelector:
+      kubernetes.io/hostname: cmc-production-node-3
