fature(kubernetes): use rwm pvc
rsw wolumes allow access vlumes from all nodes.
Make many things easier and allow replication
of the pods

--- a/cmc/values.yaml
+++ b/cmc/values.yaml
@@ -15,7 +15,10 @@ installJobDelay: 5
 databasePersistence:
   storageClassName: 
 webPersistence:
-  storageClassName:
+  enabled: false
+  accessMode: ReadWriteOnce 
+  size: 8Gi
+  # storageClassName:
 databaseService:
   externalIp:
 ingress:
