--- a/cmc/templates/web-pvc.yaml
+++ b/cmc/templates/web-pvc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.webPersistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -8,6 +9,8 @@ spec:
   {{- end }}
   accessModes:
     - ReadWriteOnce
+    - {{ .Values.webPersistence.accessMode }}
   resources:
     requests:
-      storage: 8Gi
+      storage: "{{ .Values.webPersistence.size }}"
+{{- end }}
