fix: move postgress to the node with the volumne
this is a hack. This problem will happen again

--- a/values.yaml
+++ b/values.yaml
@@ -27,4 +27,4 @@ postgresql:
     storageClass: openebs-standard
   master: 
     nodeSelector:
-      kubernetes.io/hostname: cmc-production-node-3
+      kubernetes.io/hostname: cmc-production-node
