refactoring(view): move cell index to rails view
The idea of cells is good but has some problems with other
gems and something similary can be archived by having a
helper per view

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,7 @@
 version: '2.2'
 services:
   app:
+    command: bash -c "spring start; sleep 10000000"
     volumes:
       - ~/.vimrc:/user/.vimrc
       - ~/.vim:/user/.vim
