feature: move to local storage on kubernetes
Local storage is faster than OpenEBS

--- a/values.yaml
+++ b/values.yaml
@@ -24,4 +24,6 @@ webPersistence:
   size: 4Gi
 postgresql:
   persistence:
-    storageClass: openebs-standard
+    storageClass: local-path
+  master:
+    nodeSelector: storage
