--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "^5.5.0",
     "d3-3": "^0.0.0",
     "d3-3d": "^0.0.9",
+    "dateformat": "^3.0.3",
     "dayspan-vuetify": "^0.3.2",
     "eslint-plugin-vue": "^4.7.1",
     "jsdom": "^11.5.1",
@@ -27,6 +28,7 @@
     "style-loader": "^0.21.0",
     "tui-editor": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-async-computed": "^3.6.1",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-loader": "14.2.2",
     "vue-resource": "^1.3.4",
