feature: allow docker-compose run app cucumber
Befire this commit, it was only posible to
execute docker-compose exec app cucumber. This
is a extra complexity is the usage of docker-compose.
This commit remove this restriction.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,6 +142,8 @@ tag_latest:
     - docker pull $CONTAINER_RELEASE_IMAGE
     - docker tag $CONTAINER_RELEASE_IMAGE $CI_REGISTRY_IMAGE:latest  
     - docker push $CI_REGISTRY_IMAGE:latest
+  only:
+    - master
 
 pages:
   stage: deploy
