--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,21 +87,18 @@ mocha:
 
 cucumber:
   stage: test
-  tags:
-    - selenium
   services:
     - postgres:latest
-    - selenium/standalone-chrome-debug:latest
+    - name: selenium/standalone-chrome-debug:latest
+      alias: selenium
   variables:
     POSTGRES_PASSWORD: password
     POSTGRES_DB: root
     POSTGRES_USER: root
-    DATABASE_URL: postgres://root:password@localhost/root
-    SELENIUM_HOST: localhost
+    SELENIUM_HOST: selenium
     SELENIUM_PORT: 4444
     TEST_PORT: 3001
     RAILS_ENV: test
-    TEST_HOST: lvh.me
     DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: 'true'
   script:
     - cd /app
@@ -110,6 +107,7 @@ cucumber:
 deploy:
   stage: deploy
   image: dtzar/helm-kubectl
+  allow_failure: true
   variables:
     GIT_STRATEGY: clone
   environment:
@@ -129,6 +127,7 @@ deploy:
         --set image.tag=$CI_COMMIT_SHA
         --set postgresql.postgresqlPassword=$DB_PASSWORD
         --set admin_password=$ADMIN_PASSWORD
+        --namespace cmc-production
   only:
     - master
 
