--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ detect_code_problems:
     - cd /app
     - rubycritic app/ lib/ -s 97.00
     - FAIL_ON_ERROR=1 DATABASE_URL=postgres://root:password@postgres/root rake traceroute
-    - mv /app/tmp/rubycritic $CI_PROJECT_DIR 
+    - mv /app/tmp/rubycritic $CI_PROJECT_DIR
 
 rspec:
   stage: test
@@ -127,6 +127,8 @@ deploy:
         --set image.tag=$CI_COMMIT_SHA
         --set postgresql.postgresqlPassword=$DB_PASSWORD
         --set admin_password=$ADMIN_PASSWORD
+        --set webAws.key=$WEB_AWS_KEY
+        --set webAws.secret=$WEB_AWS_SECRET
         --namespace cmc-production
   only:
     - master
@@ -139,7 +141,7 @@ tag_latest:
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker pull $CONTAINER_RELEASE_IMAGE
-    - docker tag $CONTAINER_RELEASE_IMAGE $CI_REGISTRY_IMAGE:latest  
+    - docker tag $CONTAINER_RELEASE_IMAGE $CI_REGISTRY_IMAGE:latest
     - docker push $CI_REGISTRY_IMAGE:latest
   only:
     - master
