--- a/cmc/values.yaml
+++ b/cmc/values.yaml
@@ -5,7 +5,7 @@ image:
   tag: latest
 webDeployment:
   secretKeyBase: 5d1ee3590cdac32f527d1c4c835578859ecbd50ac1b03ff6d4689c19d732b5c9050ceb66d8b625cacadb1c1228095a7fd855933ce1881075a577e7cb8aea3432
-  sentryDsn: 
+  sentryDsn:
   enviroment: production
 postgresql:
   postgresqlUsername: root
@@ -13,12 +13,19 @@ postgresql:
   postgresqlPassword: repl_password
 installJobDelay: 5
 databasePersistence:
-  storageClassName: 
+  storageClassName:
 webPersistence:
   enabled: false
-  accessMode: ReadWriteOnce 
+  accessMode: ReadWriteOnce
   size: 8Gi
   # storageClassName:
+webAws:
+  enabled: false
+  key:
+  secret:
+  region:
+  endpoint:
+  directory:
 databaseService:
   externalIp:
 ingress:
