--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,12 @@ variables:
   POSTGRES_USER: root
   DATABASE_URL: postgres://root:password@postgres/root
   GIT_STRATEGY: none
+  MINIO_ACCESS_KEY: access_key
+  MINIO_SECRET_KEY: secret_key
+  AWS_ENABLED: "true"
+  AWS_KEY: access_key
+  AWS_SECRET: secret_key
+  AWS_ENDPOINT: http://minio:9000
 
 build:
   stage: build
@@ -82,6 +88,9 @@ cucumber:
     - postgres:latest
     - name: selenium/standalone-chrome-debug:latest
       alias: selenium
+    - name: minio/minio
+      alias: minio
+      command: ["server", "/data"]
   variables:
     POSTGRES_PASSWORD: password
     POSTGRES_DB: root
@@ -94,6 +103,7 @@ cucumber:
     GIT_STRATEGY: none
   script:
     - cd /app
+    - rake storage:create
     - cucumber
 
 deploy:
