--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ services:
     image: minio/minio
     entrypoint: sh
     command: -c 'mkdir -p /data/cmc; /usr/bin/minio server /data'
+    networks:
+      default:
+        aliases:
+          - storage.lvh.me
     environment:
       - MINIO_ACCESS_KEY=access_key
       - MINIO_SECRET_KEY=secret_key
@@ -48,10 +52,9 @@ services:
       - SELENIUM_HOST=selenium
       - SELENIUM_PORT=4444
       - WEBPACKER_DEV_SERVER_HOST=webpack
-      - AWS_ENABLED=true
       - AWS_KEY=access_key
       - AWS_SECRET=secret_key
-      - AWS_ENDPOINT=http://storage:9000
+      - AWS_ENDPOINT=http://storage.lvh.me:9000
     command:  /bin/sh -c "bin/install.sh; rm -r tmp/pids; rails s -b '0.0.0.0'"
     ports:
       - "3000:3000"
