--- a/values.yaml
+++ b/values.yaml
@@ -9,6 +9,7 @@ ingress:
     certmanager.k8s.io/acme-dns01-provider: clouddns
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: true
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
   tls:
     - secretName: cost-manager-tls
       hosts:
