--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,18 +1,18 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: development
+  database: cmc_development
   pool: 5
-  username: root
+  username: <%= ENV["DB_USER"] || "postgres" %>
   password: <%= ENV["DB_PASSWORD"] %>
-  host: <%= ENV["DB_HOST"] || localhost %>
+  host: <%= ENV["DB_HOST"] || "localhost" %>
 
 test:
   adapter: postgresql
   encoding: unicode
-  database: test
+  database: cmc_test
+  username: <%= ENV["DB_USER"] || "postgres" %>
   pool: 5
-  username: root
   password: <%= ENV["DB_PASSWORD"] %>
-  host: <%= ENV["DB_HOST"] || localhost %>
+  host: <%= ENV["DB_HOST"] || "localhost" %>
 
