--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,10 @@
 multi_tenant: <%= ENV["MULTI_TENANT"] || true%>
+host: <%= ENV["HOST"] || "lvh.me" %>
 admin_password: <%= ENV["ADMIN_PASSWORD"] %>
 test_host: <%= ENV["TEST_HOST"] || (ENV["DOCKER"] && "#{`bin/get_ip.sh`.tr("\n","")}.xip.io") || "localhost" %> 
 test_port: <%= ENV["TEST_PORT"] || "3001" %>
+payment:
+  host: "http://payment:4000"
+  headers:
+    "Authorization": Basic YWRtaW46dGVzdHRlc3Q=
+    "Content-Type": application/json
