--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,25 @@ version: '2.2'
 services:
   db:
     image: postgres:latest
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=root
     volumes:
       - db_volume:/var/lib/postgresql/data
     ports: 
       - 6432:5432
+
+  stripe_mock:
+    image: registry.gitlab.com/web_utils/mockserver-docker:latest
+    volumes:
+      - ./stripe_mocks:/mocks
+    ports:
+      - "8080:8080"
+
+  payment:
+    image: registry.gitlab.com/cmc_system/cmc_payment
+    ports:
+      - "5000:4000"
+    depends_on:
+      - db
+      - stripe_mock
 
   storage:
     image: minio/minio
@@ -44,7 +55,7 @@ services:
     stdin_open: true
     tty: true
     environment:
-      - DB_PASSWORD=password
+      - DB_PASSWORD=postgres
       - DB_HOST=db
       - BUNDLE_BIN=false
       - DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL=true
@@ -65,6 +76,7 @@ services:
       - db
       - selenium
       - storage
+      - payment
 
   selenium:
     image: selenium/standalone-chrome-debug:$TAG
