fix: ssl problem caused by not reneview certificate
Try to fix it be removing deprecated configs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,7 +111,7 @@ deploy:
     - doctl kubernetes cluster kubeconfig save webcloudpower
     - helm init --upgrade
     - kubectl delete jobs -n cmc-production --all
-    - helm upgrade cmc-production chart --install --wait
+    - helm upgrade cmc-production chart --install --wait --force
         -f values.yaml
         --set image.tag=$CI_COMMIT_SHA
         --set image.repository=$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
