--- a/values.yaml
+++ b/values.yaml
@@ -4,9 +4,7 @@ ingress:
   enabled: true
   url: cost-manager.com
   annotations:
-    certmanager.k8s.io/cluster-issuer: letsencrypt-production
-    certmanager.k8s.io/acme-challenge-type: dns01
-    certmanager.k8s.io/acme-dns01-provider: clouddns
+    cert-manager.io/cluster-issuer: letsencrypt-production
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: true
     nginx.ingress.kubernetes.io/proxy-body-size: "10m"
