fix: add payment host
on production, the wrong payment host was udes

--- a/chart/templates/web-deployment.yaml
+++ b/chart/templates/web-deployment.yaml
@@ -47,6 +47,8 @@ spec:
               value: '{{ .Values.webAws.endpoint }}'
             - name: AWS_DIRECTORY
               value: '{{ .Values.webAws.directory }}'
+            - name: PAYMENT_HOST
+              value: '{{ .Values.payment.host }}'
           volumeMounts:
             {{- if .Values.webPersistence.enabled }}
             - name: files
