--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 services:
   db:
-    image: postgres:latest
+    image: postgres:11
     volumes:
       - db_volume:/var/lib/postgresql/data
     ports: 
