fix: reload error on payment site after add payment
When the payment information was added, then the session_id
was still in the url, so that if the user reloaded the page, then
a second subscription was created.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,8 +1,9 @@
 multi_tenant: <%= ENV["MULTI_TENANT"] || true%>
-host: <%= ENV["HOST"] || "lvh.me" %>
+host: <%= ENV["HOST"] || "lvh.me:3000" %>
 admin_password: <%= ENV["ADMIN_PASSWORD"] %>
 test_host: <%= ENV["TEST_HOST"] || (ENV["DOCKER"] && "#{`bin/get_ip.sh`.tr("\n","")}.xip.io") || "localhost" %> 
 test_port: <%= ENV["TEST_PORT"] || "3001" %>
+stripe_public_key: pk_test_jnjnLmEpUo9tbTIEjKKGPr62007x2iQKkM
 payment:
   enabled: <%= ENV["PAYMENT_ENABLED"] %>
   host: <%= ENV["PAYMENT_HOST"] || "http://payment:4000" %>
