feature: enable payment
Now that the about page has price page,
the payment can be enabled.

--- a/values.yaml
+++ b/values.yaml
@@ -20,6 +20,7 @@ webAws:
   directory: webcloudpower/cmc-production
 
 payment:
+  enabled: true
   host: https://payment.cost-manager.com
 
 mailer:
