--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "^2.0.0-rc.9",
+    "bootstrap-vue": "^2.4.0",
     "cross-env": "^5.1.3",
     "d3": "^5.5.0",
     "d3-3": "^0.0.0",
