--- a/docker-compose.gitlab.yml
+++ b/docker-compose.gitlab.yml
@@ -2,6 +2,11 @@ version: '2.2'
 services:
   db:
     image: postgres:latest
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 30
 
   stripe_mock:
     image: registry.gitlab.com/web_utils/mockserver-docker:latest
