--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
       - db_volume:/var/lib/postgresql/data
     ports: 
       - 6432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 1s
+      timeout: 5s
+      retries: 30
 
   stripe_mock:
     image: registry.gitlab.com/web_utils/mockserver-docker:latest
