--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,6 +117,7 @@ deploy:
         --set image.tag=$CI_COMMIT_SHA
         --set image.repository=$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG
         --set postgresql.postgresqlPassword=$DB_PASSWORD
+        --set postgresql.postgresqlPostgresPassword=$DB_PASSWORD
         --set admin_password=$ADMIN_PASSWORD
         --set webAws.key=$WEB_AWS_KEY
         --set webAws.secret=$WEB_AWS_SECRET
