--- a/chart/requirements.yaml
+++ b/chart/requirements.yaml
@@ -2,3 +2,6 @@ dependencies:
 - name: postgresql
   version: 2.7.6
   repository: https://kubernetes-charts.storage.googleapis.com/
+- name: redis
+  version: 10.5.3
+  repository: https://kubernetes-charts.storage.googleapis.com/
