--- a/docker-compose.gitlab.yml
+++ b/docker-compose.gitlab.yml
@@ -12,6 +12,9 @@ services:
       timeout: 5s
       retries: 60
 
+  redis:
+    image: redis
+
   stripe_mock:
     image: registry.gitlab.com/web_utils/mockserver-docker:latest
     dns: 8.8.8.8
@@ -42,10 +45,33 @@ services:
       - MINIO_ACCESS_KEY=access_key
       - MINIO_SECRET_KEY=secret_key
 
+  worker:
+    image: $IMAGE
+    dns: 8.8.8.8
+    command: sh -c "RAILS_ENV=production bundle exec sidekiq"
+    environment:
+      - DATABASE_URL=postgres://postgres:postgres@db/database
+      - AWS_KEY=access_key
+      - AWS_SECRET=secret_key
+      - AWS_ENDPOINT=http://storage.lvh.me:9000
+      - PAYMENT_ENABLED=true
+      - NO_RAISE_MAILER_ERRORS=true
+      - REDIS_URL=redis://redis
+      - SECRET_KEY_BASE=5d1ee3590cdac32f527d1c4c835578859ecbd50ac1b03ff6d4689c19d732b5c9050ceb66d8b625cacadb1c1228095a7fd855933ce1881075a577e7cb8aea3432
+    depends_on:
+      db:
+        condition: service_healthy
+      storage:
+        condition: service_started
+      payment:
+        condition: service_started
+      redis:
+        condition: service_started
+
   app:
     image: $IMAGE
     dns: 8.8.8.8
-    command:  /bin/sh -c "RAILS_ENV=production rails s -b '0.0.0.0'"
+    command:  sh -c "RAILS_ENV=production rails s -b '0.0.0.0'"
     networks:
       default:
         aliases:
@@ -64,8 +90,11 @@ services:
       - SEEDS_FOLDER=development
       - PAYMENT_ENABLED=true
       - NO_RAISE_MAILER_ERRORS=true
+      - REDIS_URL=redis://redis
       - TEST_HOST=lvh.me
       - SECRET_KEY_BASE=5d1ee3590cdac32f527d1c4c835578859ecbd50ac1b03ff6d4689c19d732b5c9050ceb66d8b625cacadb1c1228095a7fd855933ce1881075a577e7cb8aea3432
+    ports:
+      - "3000:3000"
     depends_on:
       db:
         condition: service_healthy
@@ -73,8 +102,13 @@ services:
         condition: service_started
       payment:
         condition: service_started
-      selenium:
+      redis:
+        condition: service_started
+      worker:
         condition: service_started
 
   selenium:
     image: selenium/standalone-chrome-debug
+    ports:
+      - "4444:4444"
+      - "5901:5900"
