--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -11,6 +11,11 @@ postgresql:
   postgresqlUsername: root
   postgresqlDatabase: database
   postgresqlPassword: repl_password
+redis:
+  usePassword: false
+  cluster:
+    enabled: false
+
 installJobDelay: 5
 databasePersistence:
   storageClassName:
@@ -43,3 +48,6 @@ mailer:
   domain: 
   user_name:
   password:
+payment:
+  enabled: false
+  host: https://example.com
