--- a/docker-compose.gitlab.yml
+++ b/docker-compose.gitlab.yml
@@ -12,6 +12,9 @@ services:
       timeout: 5s
       retries: 60
 
+  redis:
+    image: redis
+
   stripe_mock:
     image: registry.gitlab.com/web_utils/mockserver-docker:latest
     dns: 8.8.8.8
@@ -64,6 +67,7 @@ services:
       - SEEDS_FOLDER=development
       - PAYMENT_ENABLED=true
       - NO_RAISE_MAILER_ERRORS=true
+      - REDIS_URL=redis://redis
       - TEST_HOST=lvh.me
       - SECRET_KEY_BASE=5d1ee3590cdac32f527d1c4c835578859ecbd50ac1b03ff6d4689c19d732b5c9050ceb66d8b625cacadb1c1228095a7fd855933ce1881075a577e7cb8aea3432
     depends_on:
