--- a/chart/templates/worker.yaml
+++ b/chart/templates/worker.yaml
@@ -12,6 +12,9 @@ spec:
       maxSurge: 2
       maxUnavailable: 1
   template:
+    metadata:
+      labels:
+        app: {{ .Release.Name }}-worker
     spec:
       containers:
         - name: web
