--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "^2.0.0-rc.9",
+    "bootstrap-vue": "^2.11.0",
     "cross-env": "^5.2.1",
     "d3": "^5.15.0",
     "d3-3": "^0.0.0",
