--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-async-computed": "^3.8.2",
     "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-loader": "14.2.2",
+    "vue-progressbar": "^0.7.5",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-search-select": "^2.4.0",
