--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-search-select": "^2.4.0",
+    "vue-select": "^3.10.3",
     "vue-store": "^0.3.1",
     "vue-template-compiler": "^2.6.11",
     "vue-turbolinks": "^2.1.0",
