feature: add annotations for velero
Add support for backup postgres

--- a/values.yaml
+++ b/values.yaml
@@ -4,6 +4,9 @@ url: ticktensio.com
 deprecatedUrl: cost-manager.com
 postgresql:
   postgresqlUsername: root
+  master:
+    podAnnotations:
+      backup.velero.io/backup-volumes: data
 ingress:
   enabled: true
   annotations:
