--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,7 @@ services:
       - worker
 
   selenium:
-    image: selenium/standalone-chrome-debug:$TAG
+    image: selenium/standalone-chrome-debug
     ports:
       - "4444:4444"
       - "5901:5900"
