--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,7 +110,7 @@ deploy:
     url: https://ticktensio.com
   script:
     - doctl kubernetes cluster kubeconfig save webcloudpower
-    - velero backup create ticktensio-$CI_COMMIT_SHA --include-namespaces cmc-production
+    - velero backup create ticktensio-deploy-$(date +%Y%m%d%H%M%S) --include-namespaces cmc-production
     - helm init --upgrade
     - kubectl delete jobs -n cmc-production --all
     - helm upgrade cmc-production chart --install --wait --force
