--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sinon-chai": "^2.14.0",
     "sinon-stub-promise": "^4.0.0",
     "timekeeper": "^2.2.0",
+    "vue-plugin-load-script": "^1.2.0",
     "wait-until": "^0.0.2",
     "webpack-dev-server": "^2.9.5"
   },
